# ChangeLog for media-sound/gqmpeg
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-sound/gqmpeg/ChangeLog,v 1.22 2007/08/19 07:56:07 drac Exp $

  19 Aug 2007; Samuli Suominen <drac@gentoo.org> gqmpeg-0.91.1.ebuild:
  Remove USE flag gnome which installed .desktop file to invalid location.
  Remove obsolete restrict on sourceforge mirrors. Correct depends.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> gqmpeg-0.91.1.ebuild:
  (QA) RESTRICT clean up.

  04 Feb 2007; Alexis Ballier <aballier@gentoo.org> gqmpeg-0.91.1.ebuild:
  Fix dodoc, bug #138413

  21 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  -gqmpeg-0.17.0.ebuild, -gqmpeg-0.19.0.ebuild, -gqmpeg-0.20.0.ebuild:
  gnome-1.x removal

  05 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> gqmpeg-0.91.1.ebuild:
  Allow mpg321 as alternative to mpg123. Thanks to James Rowe in bug #138416.

  15 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> gqmpeg-0.17.0.ebuild,
  gqmpeg-0.19.0.ebuild, gqmpeg-0.20.0.ebuild, gqmpeg-0.91.1.ebuild:
  Fix dependencies.

  14 Sep 2005; Aron Griffis <agriffis@gentoo.org> gqmpeg-0.20.0.ebuild:
  Mark 0.20.0 stable on alpha

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> gqmpeg-0.20.0.ebuild:
  Stable on ppc64

*gqmpeg-0.91.1 (21 Nov 2004)

  21 Nov 2004; Tony Vroon <chainsaw@gentoo.org> +gqmpeg-0.91.1.ebuild:
  Version bump, closes bug #71131.

  01 Nov 2004; Markus Rothe <corsair@gentoo.org>

  gqmpeg-0.20.0.ebuild:
  Marked ~ppc64; bug #64630

  14 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> gqmpeg-0.20.0.ebuild:
  Stable amd64, sparc.

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> gqmpeg-0.20.0.ebuild:
  ~amd64

  15 May 2004; Jason Wever <weeve@gentoo.org> gqmpeg-0.20.0.ebuild:
  Added ~sparc keyword.

  13 May 2004; David Holm <dholm@gentoo.org> gqmpeg-0.20.0.ebuild:
  Added to ~ppc.

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> gqmpeg-0.17.0.ebuild,